templates/_app-website/_editable/sass/modules/_mobileNav.scss
#mobileNavC1 { position: fixed; top: 0px; width: 0px; min-height: 100%; z-index: 0; background: rgba(0,0,0,0); overflow: hidden; transition: background 1s,ease; 

    #mobileNavC { position: absolute; top: 0; right: -260px; width: 260px; height: 100%; background: #FFF; overflow-x: hidden; transition: All,.8s ease;
        
        #menuHdrC { position: relative; width: 100%; height: 79px; border-bottom: 1px solid #4f9c36;
            
            #menuHdr { padding: 34px 0px 0px 16px; font: 20px HelveticaNeueLT-Light; color: #124498; }
            
            #mobileNavStatus { position: absolute; top: 55%; left: 17px; width: 184px; transform: translateY(-50%); font: 16px HelveticaNeueLT-Light; color: #124498; }
            
            #menuclose { position: absolute; top: 36px; right: 16px; }
        }
        
        #mainNavC { margin: 3px 0px 3px 0px;
            
            ul { position: relative; margin: 0px; padding: 0px; 
            
                li { margin: 0px; padding: 0px; list-style: none; 
                    
                    a { position: relative; display: block; text-decoration: none; padding: 13px 16px; color: #124498;
                        
                        &:hover { background: #4f9c36; color: #FFF; }
                        
                    }//a
                    
                }//li
                
                //setup indicator of children
                li.hasChildren > a { 
                
                    &:after { content: "\e900"; position: absolute; right: 26px; top: 50%; transform: translateY(-50%); font: 13px 'icomoon'; color: #4f9c36; }
                        
                        &:hover:after { color: #FFF;  }
                    
                }//li.hasChildren a
                
            }//ul
            
            .hasChildren ul { position: absolute; top: 0px; display: none; z-index: 101; }
            
            .backBtn { background: #b7bebf; color: #FFF;
                
                &:after { content: "\e900"; font: 13px 'icomoon'; xcontent: url(../../images/mobile-arrow-back.png); position: absolute; right: 26px; top: 50%; transform: translateY(-50%) rotate(180deg);  }
                
            }//backBtn
         
        }//mainNavC
        
        
        #utilC { border-top: 1px solid #4f9c36;
            
            ul { margin: 3px 0px 3px 0px; padding: 0px; 
            
                li { margin: 0px; padding: 0px; list-style: none; 
                    
                    a { display: block; text-decoration: none; padding: 13px 16px; color: #124498;
                    
                        &:hover { background: #4f9c36; color: #FFF; }
                        
                    }//a
                    
                }//li
                
            }//ul
            
        }//mainNavC
        
    }//mobileNavC
    
}//mobileNavC1


//Navigation Animation
#mobileNavC1.navToggleOpen { background: rgba(0,0,0,0.75);

    #mobileNavC { right: 0px; }
    
}

